# gnstore

./: .DEV.swp  .dockerignore  .gitignore  .travis.yml  Cargo.toml  DEV  Dockerfile  Makefile  README.md  Rocket.toml  host_init.sh  nginx.conf  package.json  readme.md
api/src/: main.rs
client/: package-lock.json  package.json
client/src/: index.html
core/: Cargo.toml
core/src/: cash_register.rs  check.rs  customer.rs  email.rs  error.rs  issue.rs  lib.rs  login.rs  notification.rs  password.rs  prelude.rs  user.rs
core/src/model/: cart.rs  customer.rs  issue.rs  mod.rs  notification.rs  product.rs  user.rs
core/src/model/customer/: customer_v1.rs  mod.rs
core/src/model/notification/: mod.rs  notification_v1.rs  v1.rs
core/src/model/version/: mod.rs
core/src/model/version/customer/: v1.rs
core/src/model/version/issue/: mod.rs  v1.rs
core/src/model/version/issue/comment/: v1.rs
core/src/model/version/issue/event/: mod.rs  v1.rs
core/src/model/version/issue/event/eventkind/: v1.rs
core/src/model/version/issue/label/: mod.rs  v1.rs
core/src/model/version/user/: mod.rs  v1.rs
core/src/repo/: account.rs  event.rs  mod.rs  team.rs  transaction.rs
core/src/repo/model/: account1.rs  event1.rs  mod.rs  transaction1.rs
core/src/user/: mod.rs  password.rs
core/src/user/model/: mod.rs  user_v1.rs
core/tests/: test_user_storage.rs
static/: script.js  shortcut.js  style.css  style.css.map  style.sass  style_wide.css  style_wide.css.map  style_wide.sass
website/: Cargo.toml
website/src/: cors.rs  guard.rs  login.rs  main.rs  prelude.rs
website/src/controller/: customer.rs  issue.rs  login.rs  mod.rs  notification.rs  profile.rs  user.rs
website/src/model/: demo.rs
(+18 files in other folders)
