[package]
name = "core_lib"
version = "0.0.1"
authors = ["Peter Mezei <mezeipetister@gmail.com>"]
edition = "2018"
license = "GPLv2"

[dependencies]
bcrypt = "*"
rand = "*"
lettre = "*"
lettre_email = "*"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
storaget = "0.5.0"
nanoid = "*"