[package]
name = "website"
version = "0.0.1"
authors = ["Peter Mezei <mezeipetister@gmail.com>"]
edition = "2018"
license = "GPLv2"
workspace = "./.."

[dependencies]
core_lib = { path = "../core" }
rocket = "*"
rocket_codegen = "*"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
maud = { version = "*", features = ["rocket"]}
chrono = { version = "0.4", features = ["serde"] }
storaget = "0.5.0"
num-format = "*"
ifeq = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["serve", "json"]